sandbox/output
ProfitDeduplicate.java:16: error: incompatible types: unexpected return value
        return profit;
               ^
1 error
